--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -3,37 +3,8 @@
 @{
     // Layout = null;
     ViewBag.Title = "Employee Details Page";
+    var photo = "~/images/" + (Model.Employee.PhotoPath ?? "noimage.jpg");
 }
-
-
-@*
-    <h1>@ViewData["Title"]</h1>
-
-    @{
-        var employee = ViewData["Employee"] as EmployeeManagement.Models.Employee;
-    }
-
-    <div class="row">
-        <h1>@employee.Name</h1>
-        <p>@employee.Department</p>
-    </div>*@
-
-@*<h1>@ViewBag.Title</h1>
-
-
-    <div class="row">
-        <h1>@ViewBag.Employee.Name</h1>
-        <p>@ViewBag.Employee.Department</p>
-    </div>*@
-
-
-@*<h1>@Model.PageTitle</h1>
-
-
-<div class="row">
-    <h1>@Model.Employee.Name</h1>
-    <p>@Model.Employee.Department</p>
-</div>*@
 
 
     <div class="row justify-content-center m-3">
@@ -43,7 +14,7 @@
                     <h1>@Model.Employee.Name</h1>
                 </div>
                 <div class="card-body text-center">
-                    <img class="card-img-top" src="~/images/boy.png" alt="Alternate Text" style="height:400px" />
+                    <img class="card-img-top" src="@photo" alt="Alternate Text" style="height:400px" asp-append-version="true" />
                     <h4>Employee ID: @Model.Employee.Id</h4>
                     <h4>Email: @Model.Employee.Email</h4>
                     <h4>Department: @Model.Employee.Department</h4>
