--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -9,11 +9,14 @@
 <div class="card-deck">
     @foreach (var employee in Model)
     {
-        <div class="card m-3">
+
+        var photo = "~/images/" + (employee.PhotoPath ?? "noimage.jpg");
+
+        <div class="card m-3" style="min-width: 18rem; max-width: 30.5%">
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
-            <img src="~/images/boy.png" alt="Alternate Text" style="height:300px" />
+            <img src="@photo" alt="Alternate Text" class="imageThumbnail" asp-append-version="true"  />
             <div class="card-footer text-center">
                 <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a>
                 <a asp-controller="home" asp-action="edit" asp-route-id="@employee.Id" class="btn btn-primary m-1">Edit</a>
