--- a/EmployeeManagement/Views/Home/Edit.cshtml
+++ b/EmployeeManagement/Views/Home/Edit.cshtml
@@ -1,13 +1,19 @@
-﻿@model EmployeeCreateViewModel
+﻿@model EmployeeEditViewModel
 
 @{
-    ViewBag.Title = "Create Employee";
+    ViewBag.Title = "Edit Employee";
+
+    var photoPath = "~/images/" + (Model.ExistingPhotoPath ?? "noimage.jpg");
+
 }
 
 <div class="m-3">
-    <form enctype="multipart/form-data" asp-controller="Home" asp-action="Create" method="post">
 
-        <!--<div asp-validation-summary="All" class="text-danger"></div>-->
+    <form enctype="multipart/form-data" asp-controller="Home" asp-action="Edit" method="post">
+
+        <input hidden asp-for="Id" />
+        <input hidden asp-for="ExistingPhotoPath" />
+
 
         <div class="form-group">
             <label asp-for="Name"></label>
@@ -30,18 +36,24 @@
         <div class="form-group">
             <div class="custom-file">
                 <input asp-for="Photo" class="form-control custom-file-input" />
-                <label class="custom-file-label">Choose File...</label>
+                <label class="custom-file-label">Select file to update the photo</label>
             </div>
         </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Create</button>
+
+        <div class="form-group text-center">
+            <img src="@photoPath" alt="Alternate Text" class="imageThumbnail" asp-append-version="true" />
         </div>
 
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Update</button>
+            <a asp-controller="home" asp-action="index" class="btn btn-primary">Cancel</a>
+        </div>
 
     </form>
 
 </div>
+
 
 @section Scripts {
 
